# decision-making

./: .gitattributes  .gitignore  LICENSE  README.md
00_pandas/: model_graph  series_intro.ipynb
01_probability/: pyproject.toml  warmup.ipynb
01_probability/decision_making/: simulator.py
bayes_playground/: 0_beta_binomial.qmd
decision_labs/: pyproject.toml
decision_labs/notebooks/: 01_tourism.ipynb  02_bayes.ipynb  02_lln.ipynb  03_clt.ipynb  04_ab_testing.ipynb
decision_labs/src/decision_labs/: __init__.py  airplane.py  lln.py
decision_labs/src/decisions/: airplane.py
decision_labs/tests/: test_airplane_simulation.py
decision_labs_r/: 1_bday_paradox.qmd  1_prob_simulations.qmd  2_us_schools.qmd  3_neyman_pearson.qmd  3_stories_data.qmd  4_ds_survey.qmd  5_newsvendor.qmd
docs/: bibliography.yml
playground/: 01_tourism.ipynb  02_bayes.ipynb  03_limit_theorems.ipynb  04_ab_testing.ipynb  05_linear_models.ipynb  birthday_paradox.qmd  conda-env.yml
playground/gt_tables/: tutorial.qmd
playground/simulation/: airplane.py
playground/simulation/tests/: test_airplane_simulation.py
projects/reddit_posts/: pyproject.toml
projects/reddit_posts/gpa_ranking/: ranking.py
projects/reddit_posts/notebooks/: reddit.ipynb
slides/week1/: references.bib  week1.qmd  week1_lecture2.html  week1_lecture2.qmd
