[tool.poetry]
name = "decision_making"
version = "0.1.0"
description = ""
authors = ["Mihai Bizovi <bizovim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
polars = "^0.16.18"
pymc = "^5.2.0"
networkx = "^3.1"
seaborn = "^0.12.2"
pyarrow = "^11.0.0"
statsmodels = "^0.13.5"
jax = "^0.4.8"
jaxlib = "^0.4.7"
graphviz = "^0.20.1"
pulp = "^2.7.0"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
