[project]
name = "decision-labs"
version = "0.1.0"
description = "Utility functions for the Decision Science labs"
readme = "README.md"
authors = [
    { name = "bizovi", email = "bizovim@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.20.0",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "pytest>=8.3.4",
]
