[tool.poetry]
name = "gpa-ranking"
version = "0.1.0"
description = "Utilities for ranking and getting reddit posts"
authors = ["Mihai Bizovi <bizovim@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gpa_ranking"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5"
duckdb = "^0.7.1"
praw = "^7.7.0"
# dotenv = "^0.0.5"
typer = "^0.7.0"
streamlit = "^1.21.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
pytest = "^7.3.1"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
